fix x overflows on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,51 +46,51 @@ button {
 
 @keyframes glitch1 {
   0% {
-    clip: rect(94px, 9999px, 25px, 0); }
+    clip: rect(86px, 9999px, 96px, 0); }
   10% {
-    clip: rect(79px, 9999px, 90px, 0); }
+    clip: rect(51px, 9999px, 11px, 0); }
   20% {
-    clip: rect(39px, 9999px, 69px, 0); }
+    clip: rect(30px, 9999px, 65px, 0); }
   30% {
-    clip: rect(53px, 9999px, 9px, 0); }
+    clip: rect(14px, 9999px, 49px, 0); }
   40% {
-    clip: rect(13px, 9999px, 37px, 0); }
+    clip: rect(34px, 9999px, 17px, 0); }
   50% {
-    clip: rect(87px, 9999px, 62px, 0); }
+    clip: rect(24px, 9999px, 82px, 0); }
   60% {
-    clip: rect(38px, 9999px, 97px, 0); }
+    clip: rect(92px, 9999px, 22px, 0); }
   70% {
-    clip: rect(23px, 9999px, 91px, 0); }
+    clip: rect(71px, 9999px, 99px, 0); }
   80% {
-    clip: rect(16px, 9999px, 83px, 0); }
+    clip: rect(4px, 9999px, 76px, 0); }
   90% {
-    clip: rect(37px, 9999px, 14px, 0); }
+    clip: rect(86px, 9999px, 17px, 0); }
   100% {
-    clip: rect(36px, 9999px, 48px, 0); } }
+    clip: rect(26px, 9999px, 73px, 0); } }
 
 @keyframes glitch2 {
   0% {
-    clip: rect(80px, 9999px, 65px, 0); }
+    clip: rect(45px, 9999px, 30px, 0); }
   10% {
-    clip: rect(63px, 9999px, 44px, 0); }
+    clip: rect(90px, 9999px, 29px, 0); }
   20% {
-    clip: rect(66px, 9999px, 6px, 0); }
+    clip: rect(65px, 9999px, 17px, 0); }
   30% {
-    clip: rect(87px, 9999px, 80px, 0); }
+    clip: rect(24px, 9999px, 47px, 0); }
   40% {
-    clip: rect(76px, 9999px, 88px, 0); }
+    clip: rect(64px, 9999px, 84px, 0); }
   50% {
-    clip: rect(9px, 9999px, 75px, 0); }
+    clip: rect(93px, 9999px, 24px, 0); }
   60% {
-    clip: rect(96px, 9999px, 81px, 0); }
+    clip: rect(21px, 9999px, 41px, 0); }
   70% {
-    clip: rect(86px, 9999px, 77px, 0); }
+    clip: rect(60px, 9999px, 49px, 0); }
   80% {
-    clip: rect(90px, 9999px, 40px, 0); }
+    clip: rect(100px, 9999px, 31px, 0); }
   90% {
-    clip: rect(81px, 9999px, 51px, 0); }
+    clip: rect(1px, 9999px, 48px, 0); }
   100% {
-    clip: rect(68px, 9999px, 89px, 0); } }
+    clip: rect(37px, 9999px, 63px, 0); } }
 
 .u-fadeOut {
   animation: fadeOut .2s ease-out forwards; }
@@ -105,7 +105,7 @@ button {
   justify-content: center;
   align-items: center;
   padding: 2rem 4rem;
-  margin: 2rem;
+  margin: 2rem 0 2rem 0;
   box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2); }
   .releaseBox__header {
     position: relative;
@@ -171,6 +171,7 @@ button {
 .page {
   min-height: 100vh;
   min-width: 100%;
+  overflow-x: hidden;
   background-image: linear-gradient(to bottom right, #e6e6e6, rgba(25, 25, 25, 0.5)), url("../assets/img/5.jpg");
   background-size: cover;
   display: flex;
