--- a/sass/components/_releaseBox.scss
+++ b/sass/components/_releaseBox.scss
@@ -5,7 +5,7 @@
     justify-content: center;
     align-items: center;
     padding: 2rem 4rem;
-    margin: 2rem;
+    margin: 2rem 0 2rem 0;
     @include shadow(1px, 1px, 5px, .2);
 
     &__header{
