--- a/sass/layout/_page.scss
+++ b/sass/layout/_page.scss
@@ -1,6 +1,7 @@
 .page {
     min-height: 100vh;
     min-width: 100%;
+    overflow-x: hidden;
     background-image: linear-gradient(to bottom right, rgba($color-offwhite, 1), rgba($color-nearblack, .5)),
                       url("../assets/img/5.jpg");
     background-size: cover;
